added aws and dicks data

--- a/src/notebook/AWS/etl_aws_upload.ipynb
+++ b/src/notebook/AWS/etl_aws_upload.ipynb
@@ -125,6 +125,123 @@
     "ds1_data.to_sql('ds1_data', engine, if_exists='replace', index=False)\n",
     "ds2_data.to_sql('ds2_data', engine, if_exists='replace', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Amazon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merchants_data =  pd.read_csv(r'../../../data/Amazon/merchants.csv')\n",
+    "merchants_data['launch_date'] = pd.to_datetime(merchants_data['launch_date'])\n",
+    "merchants_data\n",
+    "merchants_data.to_sql('merchants', engine, if_exists='replace', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "orders_data =  pd.read_csv(r'../../../data/Amazon/orders.csv')\n",
+    "orders_data['order_date'] = pd.to_datetime(orders_data['order_date'])\n",
+    "orders_data\n",
+    "orders_data.to_sql('orders', engine, if_exists='replace', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DICKS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "products_q1_v1_data =  pd.read_csv(r'../../../data/dicks/products_q1_v1.csv')\n",
+    "products_q1_v1_data.to_sql('products_q1_v1_data', engine, if_exists='replace', index=False)\n",
+    "#\n",
+    "products_q1_v2_data =  pd.read_csv(r'../../../data/dicks/products_q1_v2.csv')\n",
+    "products_q1_v2_data.to_sql('products_q1_v2_data', engine, if_exists='replace', index=False)\n",
+    "#\n",
+    "products_q1_v3_data =  pd.read_csv(r'../../../data/dicks/products_q1_v3.csv')\n",
+    "products_q1_v3_data.to_sql('products_q1_v3_data', engine, if_exists='replace', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transactions_q2_v1_data =  pd.read_csv(r'../../../data/dicks/transactions_q2_v1.csv')\n",
+    "transactions_q2_v1_data['date'] = pd.to_datetime(transactions_q2_v1_data['date'])\n",
+    "transactions_q2_v1_data.to_sql('transactions_q2_v1_data', engine, if_exists='replace', index=False)\n",
+    "#\n",
+    "transactions_q2_v2_data =  pd.read_csv(r'../../../data/dicks/transactions_q2_v2.csv')\n",
+    "transactions_q2_v2_data['date'] = pd.to_datetime(transactions_q2_v2_data['date'])\n",
+    "transactions_q2_v2_data.to_sql('transactions_q2_v2_data', engine, if_exists='replace', index=False)\n",
+    "#\n",
+    "transactions_q2_v3_data =  pd.read_csv(r'../../../data/dicks/transactions_q2_v3.csv')\n",
+    "transactions_q2_v3_data['date'] = pd.to_datetime(transactions_q2_v3_data['date'])\n",
+    "transactions_q2_v3_data.to_sql('transactions_q2_v3_data', engine, if_exists='replace', index=False)"
+   ]
   }
  ],
  "metadata": {
