Dick's Sporting Goods

--- a/src/notebook/AWS/etl_aws_upload.ipynb
+++ b/src/notebook/AWS/etl_aws_upload.ipynb
@@ -183,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### DICKS"
+    "### Dick's Sporting Goods"
    ]
   },
   {
